--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "mongoose": "^5.0.0-rc2",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
