--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng build -w",
+    "start": "ng serve -w",
     "serve": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.0-rc2",
     "npm": "^5.8.0",
