--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.0.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
@@ -21,12 +22,18 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/router-store": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^5.2.0",
     "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.0-rc2",
+    "ngrx-store-freeze": "^0.2.2",
     "npm": "^5.8.0",
     "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.1",
