--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -w --open",
-    "serve": "ng serve"
+    "serve": "ng serve",
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -34,7 +35,7 @@
     "hammerjs": "^2.0.8",
     "mongoose": "^5.0.0-rc2",
     "ngrx-store-freeze": "^0.2.2",
-    "npm": "^5.8.0",
+    "npm": "^5.7.1",
     "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
